# codal-microbit-nrf5sdk

./: CMakeCache.txt  CMakeLists.txt  LICENCE.txt  README.md  cmake_install.cmake
nRF5SDK/components/ble/nrf_ble_scan/: nrf_ble_scan.c  nrf_ble_scan.h
sdk_config/: sdk_config.h
